--- a/assets/pages/gameinfo.html
+++ b/assets/pages/gameinfo.html
@@ -211,7 +211,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="map">
-            <h2>South% Elementary School</h2>
+            <h2>South Elementary School</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.193523350116!2d-87.85716792467541!3d42.317070937817704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses!2sar!4v1691963036814!5m2!1ses!2sar"
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
