--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -18,11 +18,11 @@
 
             <nav class="navbar">
                 <a class="nav-enlace" href="../../index.html">Home</a>
-                <a class="nav-enlace link-activo" href="#">About MDHL</a>
+                <a class="nav-enlace link-activo" href="#">About Us</a>
                 <a class="nav-enlace" href="../../assets/pages/contact.html">Contact</a>
                 <a class="nav-enlace" href="../../assets/pages/rules.html">Rules</a>
                 <a class="nav-enlace" href="../../assets/pages/gameinfo.html">Games Info</a>
-                <a class="nav-enlace" href="../../assets/pages/registration.html">Registration Form</a>
+                <a class="nav-enlace" href="../../assets/pages/registration.html">Registration</a>
             </nav>
 
         </div>
