--- a/assets/pages/gameinfo.html
+++ b/assets/pages/gameinfo.html
@@ -20,11 +20,11 @@
 
                 <nav class="navbar">
                     <a class="nav-enlace" href="../../index.html">Home</a>
-                    <a class="nav-enlace" href="../../assets/pages/about.html">About MDHL</a>
+                    <a class="nav-enlace" href="../../assets/pages/about.html">About Us</a>
                     <a class="nav-enlace" href="../../assets/pages/contact.html">Contact</a>
                     <a class="nav-enlace" href="../../assets/pages/rules.html">Rules</a>
                     <a class="nav-enlace link-activo " href="#">Games Info</a>
-                    <a class="nav-enlace" href="../../assets/pages/registration.html">Registration Form</a>
+                    <a class="nav-enlace" href="../../assets/pages/registration.html">Registration</a>
                 </nav>
 
             </div>
