--- a/assets/pages/registration.html
+++ b/assets/pages/registration.html
@@ -51,13 +51,13 @@
 
                     <div class="bloquecito">
 
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="firstname">First Name:</label>
                             <input type="text" id="firstname" name="firstname" placeholder="Enter first name" required>
                             <span class="required">*</span>
                         </div>
 
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="lastname">Last Name:</label>
                             <input type="text" id="lastname" name="lastname" placeholder="Enter last name" required>
                             <span class="required">*</span>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="bloquecito">
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="address">Street Address:</label>
                             <input type="text" id="address" name="address">
                         </div>
@@ -74,12 +74,12 @@
 
                     <div class="bloquecito">
 
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="city">City:</label>
                             <input type="text" id="city" name="city" placeholder="Enter city">
                         </div>
 
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="zipcode">Zip Code:</label>
                             <input type="text" id="zipcode" name="zipcode" placeholder="Enter Zip Code">
                         </div>
@@ -88,7 +88,7 @@
 
                     <div class="bloquecito">
 
-                        <div class="input-wrapper">
+                        <div class="input-form">
                             <label for="birthdate">Birth Date:</label>
                             <input type="date" id="birthdate" name="birthdate">
                         </div>
@@ -96,7 +96,7 @@
                         <fieldset class="personal_info">
                             <legend>Gender</legend>
 
-                            <div class="input-wrapper">
+                            <div class="input-form">
                                 <label for="female">Female</label>
                                 <input type="radio" name="gender" id="female" value="Female">
                                 <label for="male">Male</label>
