Ajustes en resoluciones celular-tablet

--- a/assets/pages/registration.html
+++ b/assets/pages/registration.html
@@ -18,11 +18,11 @@
 
             <nav class="navbar">
                 <a class="nav-enlace" href="../../index.html">Home</a>
-                <a class="nav-enlace" href="../../assets/pages/about.html">About MDHL</a>
+                <a class="nav-enlace" href="../../assets/pages/about.html">About Us</a>
                 <a class="nav-enlace" href="../../assets/pages/contact.html">Contact</a>
                 <a class="nav-enlace" href="../../assets/pages/rules.html">Rules</a>
                 <a class="nav-enlace" href="../../assets/pages/gameinfo.html">Games Info</a>
-                <a class="nav-enlace link-activo" href="#">Registration Form</a>
+                <a class="nav-enlace link-activo" href="#">Registration</a>
             </nav>
 
         </div>
@@ -97,9 +97,9 @@
                             <legend>Gender</legend>
 
                             <div class="input-form">
-                                <label for="female">Female</label>
+                                <label for="gender">Female</label>
                                 <input type="radio" name="gender" id="female" value="Female">
-                                <label for="male">Male</label>
+                                <label for="gender">Male</label>
                                 <input type="radio" name="gender" id="male" value="Male">
                             </div>
                         </fieldset>
@@ -111,23 +111,23 @@
                 <fieldset class="personal_info">
                     <legend>Educational Level</legend>
 
-                    <label for="preschool">Pre-School</label>
-                    <input type="checkbox" name="level" id="preschool" value="preschool">
+                    <label for="level">Pre-School</label>
+                    <input type="radio" name="level" id="preschool" value="preschool">
 
-                    <label for="one">1st</label>
-                    <input type="checkbox" name="level" id="one" value="one">
+                    <label for="level">1st</label>
+                    <input type="radio" name="level" id="one" value="one">
 
-                    <label for="two">2nd</label>
-                    <input type="checkbox" name="level" id="two" value="two">
+                    <label for="level">2nd</label>
+                    <input type="radio" name="level" id="two" value="two">
 
-                    <label for="three">3rd</label>
-                    <input type="checkbox" name="level" id="three" value="three">
+                    <label for="level">3rd</label>
+                    <input type="radio" name="level" id="three" value="three">
 
-                    <label for="four">4th</label>
-                    <input type="checkbox" name="level" id="four" value="four">
+                    <label for="level">4th</label>
+                    <input type="radio" name="level" id="four" value="four">
 
-                    <label for="five">5th</label>
-                    <input type="checkbox" name="level" id="five" value="five">
+                    <label for="level">5th</label>
+                    <input type="radio" name="level" id="five" value="five">
 
                 </fieldset>
 
@@ -150,17 +150,17 @@
                 <fieldset class="personal_info">
                     <legend>What position(s) do you normally play? ( check all that apply) </legend>
 
-                    <label for="forward">Forward</label>
-                    <input type="checkbox" name="forward" id="forward" value="fordward">
+                    <label for="position">Forward</label>
+                    <input type="checkbox" name="position" id="forward" value="fordward">
 
-                    <label for="defense">Defense</label>
-                    <input type="checkbox" name="defense" id="defense" value="defense">
+                    <label for="position">Defense</label>
+                    <input type="checkbox" name="position" id="defense" value="defense">
 
-                    <label for="midfield">Midfield</label>
-                    <input type="checkbox" name="midfield" id="midfield" value="midfield">
+                    <label for="position">Midfield</label>
+                    <input type="checkbox" name="position" id="midfield" value="midfield">
 
-                    <label for="goalkeeper">Goalkeeper</label>
-                    <input type="checkbox" name="goalkeeper" id="goalkeeper" value="goalkeeper">
+                    <label for="position">Goalkeeper</label>
+                    <input type="checkbox" name="position" id="goalkeeper" value="goalkeeper">
 
                 </fieldset>
 
@@ -168,26 +168,27 @@
                 <fieldset class="personal_info">
                     <legend>Uniform Size</legend>
 
-                    <label for="youthsmall">Youth Small</label>
-                    <input type="checkbox" name="uniformsize" id="youthsmall" value="youthsmall">
+                    <label for="uniformsize">Youth Small</label>
+                    <input type="radio" name="uniformsize" id="youthsmall" value="youthsmall">
 
-                    <label for="youthmedium">Youth Medium</label>
-                    <input type="checkbox" name="uniformsize" id="youthmedium" value="youthmedium">
+                    <label for="uniformsize">Youth Medium</label>
+                    <input type="radio" name="uniformsize" id="youthmedium" value="youthmedium">
 
-                    <label for="youthlarge">Youth Large</label>
-                    <input type="checkbox" name="uniformsize" id="youthlarge" value="youthlarge">
+                    <label for="uniformsize">Youth Large</label>
+                    <input type="radio" name="uniformsize" id="youthlarge" value="youthlarge">
 
-                    <label for="small">Small</label>
-                    <input type="checkbox" name="uniformsize" id="small" value="small">
+                    <label for="uniformsize">Small</label>
+                    <input type="radio" name="uniformsize" id="small" value="small">
 
-                    <label for="medium">Medium</label>
-                    <input type="checkbox" name="uniformsize" id="medium" value="medium">
+                    <label for="uniformsize">Medium</label>
+                    <input type="radio" name="uniformsize" id="medium" value="medium">
 
-                    <label for="large">Large</label>
-                    <input type="checkbox" name="uniformsize" id="large" value="large">
+                    <label for="uniformsize">Large</label>
+                    <input type="radio" name="uniformsize" id="large" value="large">
 
-                    <label for="extralarge">Extra-Large</label>
-                    <input type="checkbox" name="uniformsize" id="extralarge" value="extralarge">
+                    <label for="uniformsize">Extra-Large</label>
+                    <input type="radio" name="uniformsize" id="extralarge" value="extralarge">
+
 
                 </fieldset>
 
