arreglo en seleccion school en registration form

--- a/assets/pages/registration.html
+++ b/assets/pages/registration.html
@@ -136,7 +136,7 @@
                     <legend>Wich Elementary School do you live near ?</legend>
                     <label for="nearschool">Closest School:</label>
                     <select id="nearschool" name="nearschool">
-                        <option value="">Seleccion un país</option>
+                        <option value="">School selection</option>
                         <option value="AJ Katzenmaier">AJ Katzenmaier</option>
                         <option value="Greenbay">Greenbay</option>
                         <option value="Howard A Yeager">Howard A Yeager</option>
