nuevos arreglos en form registration

--- a/assets/pages/registration.html
+++ b/assets/pages/registration.html
@@ -73,6 +73,8 @@
                     </div>
 
                     <div class="bloquecito">
+                    
+                    <div class="bloquecito">
 
                         <div class="input-form">
                             <label for="city">City:</label>
@@ -105,6 +107,9 @@
                         </fieldset>
 
                     </div>
+
+                </div>
+
 
                 </fieldset>
 
