agregado titulo general  div con mapas de escuelas

--- a/assets/pages/gameinfo.html
+++ b/assets/pages/gameinfo.html
@@ -49,11 +49,8 @@
 
                 <h2>Fall Schedule</h2>
 
-                <br>
 
                 <h2 class="h2-subrayado">*All games take place on Saturday</h2>
-
-                <br>
 
                 <div>
                     <table class="table-date">
@@ -140,7 +137,6 @@
                     <p><strong>Facility Type:</strong> Outdoor</p>
                 </div>
 
-                <br>
 
                 <div>
                     <p><strong>Aditional Info:</strong> If deemed necessary by MDHL games may be shortened or cancelled
@@ -148,13 +144,9 @@
                         to extreme weather conditions</p>
                 </div>
 
-                <br>
-
                 <div>
                     <p><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</p>
                 </div>
-
-                <br>
 
 
                 <div class="game-info-contacto">
@@ -170,8 +162,12 @@
 
     </div>
 
+    <div>
+        <h2 class="h2-subrayado">School's Location</h2>
+    </div>
 
     <div class="map-container">
+
         <div class="map">
             <h2>AJ Katzenmaier Elementary</h2>
             <iframe
